733: making cookie banner fixed on mobile when header esu is visible

--- a/sass/base/components/email-signup/_email-signup-head.scss
+++ b/sass/base/components/email-signup/_email-signup-head.scss
@@ -11,7 +11,16 @@
 
 // prevent body from scrolling when esu popup is visible
 .js-esu-head-noscroll {
+  position: relative;
   overflow: hidden;
+
+  // cookie banner fixes
+  .cc_banner-wrapper {
+    position: fixed;
+    @include breakpoint($screen-md) {
+      position: relative;
+    }
+  }
 }
 //hide esu form initially
 .block--cr-email-signup.block--cr-email-signup--head,
